deploys/linkerd/infra.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: law-knowledge
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-v1
  namespace: law-knowledge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-v1
  template:
    metadata:
      labels:
        app: redis-v1
    spec:
      containers:
        - name: redis
          image: redis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: tcp
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
            limits:
              cpu: 500m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: law-knowledge
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: tcp
      protocol: TCP
      name: tcp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-v1
  namespace: law-knowledge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-v1
  template:
    metadata:
      labels:
        app: postgres-v1
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: tcp
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
            limits:
              cpu: 500m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: law-knowledge
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: tcp
      protocol: TCP
      name: tcp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-v1
  namespace: law-knowledge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-v1
  template:
    metadata:
      labels:
        app: mongo-v1
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              name: tcp
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
            limits:
              cpu: 500m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: law-knowledge
  labels:
    app: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: tcp
      protocol: TCP
      name: tcp
