deploys/linkerd/gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: law-knowledge-ingress
  namespace: law-knowledge
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  rules:
    - host: api.hutech.dev.com
      http:
        paths:
          - path: /
            backend:
              serviceName: api-gateway
              servicePort: 8080
    - host: hutech.dev.com
      http:
        paths:
          - path: /
            backend:
              serviceName: website
              servicePort: 4200
